# browser-harness-testing

./: .env.example  .gitignore  ARCHITECTURE.md  HARNESS-VS-PLAYWRIGHT.md  README.md  pyproject.toml
.github/workflows/: test-executor.yml
agent/: __init__.py  app_model.py  ci_manager.py  jira_client.py  self_healer.py  test_author.py
browser_harness/: README.md  SKILL.md  admin.py  connection.md  daemon.py  helpers.py  install.md  pyproject.toml  run.py
docs/: HOW-TO.md
docs/superpowers/specs/: 2026-04-26-e2e-testing-agent-design.md
harness/: __init__.py  assertions.py  helpers.py  runner.py
tests/: sap_build_smoke.py  test_assertions.py  test_ci_manager.py  test_example.py  test_jira_client.py  test_self_healer.py  test_test_author.py
