[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-harness"
version = "0.1.0"
description = "Fork — AI-driven E2E testing system for SAP Build"
requires-python = ">=3.11"
dependencies = [
    "cdp-use==1.4.5",
    "fetch-use==0.4.0",
    "websockets==16.0",
]

[project.scripts]
browser-harness = "browser_harness.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["browser_harness*"]
